appId: host.exp.exponent
---
- runFlow:
    when:
      notVisible:
        id: "building-selection"
    file: ../openLink.yaml
- tapOn: "Search building"
- inputText: "Vanier"
- tapOn:
    id: "end-result-VL"
- assertVisible:
    id: "directions-action-button"
- tapOn:
    id: "directions-action-button"
- tapOn: "Your Location"
- inputText: "Hall"
- tapOn:
    id: "start-result-H"
- assertVisible:
    id: "walking-selector"
- assertVisible:
    id: "transit-selector"
- assertVisible:
    id: "driving-selector"
- assertVisible:
    id: "bicycling-selector"
- assertVisible:
    id: "shuttle-selector"
- tapOn:
    id: "transit-selector"
- assertVisible:
    id: "routes-info-popup"
- swipe:
    start: 45%, 74%
    end: 45%, 40%
    duration: 800
- tapOn:
    id: "transit-route-0"
- assertVisible:
    id: "transit-step-0"
- swipe:
    from:
      id: "driving-selector"
    direction: DOWN
