appId: host.exp.exponent
---
- runFlow:
    when:
      notVisible:
        id: "building-selection"
    file: ../openLink.yaml
- setLocation:
    latitude: 45.4957849
    longitude: -73.577225
- assertVisible:
    id: "tab-calendar"
- tapOn:
    id: "tab-calendar"
- runFlow:
    when:
      visible:
        id: "courses-view"
    commands:
      - assertVisible:
          id: "next-class"
      - assertVisible: "SOEN 357 at 08:45"
      - tapOn:
          text: "SOEN.*357"
      - assertVisible: "Room H-535"
      - tapOn:
          id: "close-class-popup"
      - tapOn:
          id: "next-class"
      - assertVisible: "H – Henry F. Hall Building"
      - tapOn: "Directions"
      - assertVisible:
          id: "walking-selector"
      - assertVisible:
          id: "transit-selector"
      - assertVisible:
          id: "driving-selector"
      - assertVisible:
          id: "bicycling-selector"
      - assertVisible:
          id: "shuttle-selector"
      - tapOn:
          id: "transit-selector"
      - swipe:
          from:
            id: "routes-info-popup"
          direction: UP
      - tapOn:
          id: "transit-route-0"
      - assertVisible:
          id: "transit-step-0"
      - swipe:
          from:
            id: "driving-selector"
          direction: DOWN
