appId: host.exp.Exponent
---
- openLink: exp://localhost:8081
- tapOn: "SGW"
- tapOn:
    id: "marker-FB"
- assertVisible:
    text: "FB – Faubourg Building"
- tapOn:
    point: "95%, 50%"
- assertNotVisible:
    text: "FB – Faubourg Building"
